# flamekit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/actions/validate-version/: action.yaml  validate.py
.github/workflows/: publish_pypi.yaml
examples/: compare_results.ipynb  mnist_example.ipynb
flamekit/: callbacks.py  devices.py  lr_scheduler.py  pbars.py  plotting.py  sampling.py  trainer.py  training.py  utils.py  var_scheduler.py
